--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
       <strong>We're sorry but jw-frame-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="//cdn.ejw.cn/front/libs/vue/2.5.13/vue.min.js"></script>
+    <script src="//cdn.ejw.cn/front/libs/vue-router/3.0.1/vue-router.min.js"></script>
+    <script>
+      window.jw = window.jw || {}
+      jw.sources = jw.sources || ['/demo2/js/config.js']
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
